Update Exercise Geomechanics and Structural Geology (Feb 2026).ipynb

--- a/Exercise Geomechanics and Structural Geology (Feb 2026).ipynb
+++ b/Exercise Geomechanics and Structural Geology (Feb 2026).ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d6161a1a",
+   "metadata": {},
+   "source": [
+    "- Nanda Njh HA.\n",
+    "- Pablo Oliver (6483186)\n",
+    "- Lennard Stoeck"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "299d637f",
    "metadata": {},
    "source": [
