Update Exercise Geomechanics and Structural Geology (Feb 2026).ipynb

--- a/Exercise Geomechanics and Structural Geology (Feb 2026).ipynb
+++ b/Exercise Geomechanics and Structural Geology (Feb 2026).ipynb
@@ -61,13 +61,48 @@
     "\n",
     "$$a = \\tan^2\\left(45° + \\frac{\\varphi}{2}\\right) = \\frac{1 + \\sin\\varphi}{1 - \\sin\\varphi}$$\n",
     "\n",
+    "\n",
     "Solving for friction angle:\n",
     "\n",
     "$$\\sin\\varphi = \\frac{a-1}{a+1} \\quad \\Rightarrow \\quad \\varphi = \\arcsin\\left(\\frac{a-1}{a+1}\\right)$$\n",
     "\n",
     "Cohesion from intercept:\n",
     "\n",
-    "$$C = \\frac{y_{int}}{2\\sqrt{a}}$$"
+    "$$C = \\frac{y_{int}}{2\\sqrt{a}}$$\n",
+    "\n",
+    "---\n",
+    "Other way for friction angle: \n",
+    "\n",
+    "\n",
+    "$$\\sqrt{a} = \\tan\\left(45^\\circ + \\frac{\\varphi}{2}\\right)$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "$$\\tan^{-1}(\\sqrt{a}) = 45^\\circ + \\frac{\\varphi}{2}$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\varphi = 2\\left(\\tan^{-1}(\\sqrt{a}) - 45^\\circ\\right)\n",
+    "$$\n",
+    "\n",
+    "Other way for Cohesion from intercept : \n",
+    "\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "b = 2C \\tan\\left(45^\\circ + \\frac{\\varphi}{2}\\right)\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "C = \\frac{b}{2 \\tan\\left(45^\\circ + \\frac{\\varphi}{2}\\right)}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
