Update Exercise Geomechanics and Structural Geology (Feb 2026).ipynb

--- a/Exercise Geomechanics and Structural Geology (Feb 2026).ipynb
+++ b/Exercise Geomechanics and Structural Geology (Feb 2026).ipynb
@@ -277,7 +277,8 @@
    "id": "a70915d8",
    "metadata": {},
    "source": [
-    "Based on the calculation, the cohesion (C) = 11.98 MPa and friction angle (φ) = 42.23°. The linear regression shows good fit (R² = 0.964) confirming the validity of Mohr-Coulomb criterion for this sandstone."
+    "Based on the calculation, the cohesion (C) = 11.98 MPa and friction angle (φ) = 42.23°. The linear regression shows good fit (R² = 0.964) confirming the validity of Mohr-Coulomb criterion for this sandstone.\n",
+    "We see that the samples become stronger as the confinement pressure increases as the sigma 1 (value at failure) increases. "
    ]
   },
   {
