Update Exercise Geomechanics and Structural Geology (Feb 2026).ipynb

--- a/Exercise Geomechanics and Structural Geology (Feb 2026).ipynb
+++ b/Exercise Geomechanics and Structural Geology (Feb 2026).ipynb
@@ -441,6 +441,97 @@
    "source": [
     "**Interpretation**: lower porosity generally correlates with higher rock strength, as demonstrated by Pennant sandstone (4.57% porosity) exhibiting the highest cohesion (28.40 MPa) and steepest strength gradient with depth compared to Darley Dale (13.5%) and Red Felser (21.4%)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b5382c5",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### *Task 3*\n",
+    "</div>\n",
+    "Evaluate the sigma1 and sigma 3 for rocks that have a typical density of 2.65 g/cm3 and a\n",
+    "Poisson’s ratio of 0.25 under the assumption you are in a normal faulting regime where the\n",
+    "maximum principal stress (sigma1) is vertical.\n",
+    "\n",
+    "<u>a) Evaluate what happens when the Poisson’s ratio is variable</u> : \n",
+    "\n",
+    "\n",
+    "Normal faultime regime, so : \n",
+    "\n",
+    "- σ₁ = vertical stress \\( S_v \\)\n",
+    "- σ₃ = minimum horizontal stress \\( S_{hmin} \\)\n",
+    "\n",
+    "Given:\n",
+    "\n",
+    "- Density (ρ) = 2.65 g/cm³\n",
+    "- Poisson’s ratio (ν) = 0.25\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "The vertical stress at depth  z  is:\n",
+    "\n",
+    "$$\n",
+    "\\sigma_1(z) = S_v(z) = \\rho g z\n",
+    "$$\n",
+    "\n",
+    " \n",
+    "and the horizontal stress : \n",
+    "\n",
+    "$$\n",
+    "\\sigma_3(z) = \\frac{\\nu}{1 - \\nu} \\sigma_1(z)\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Substituting:\n",
+    "\n",
+    "$$\n",
+    "\\sigma_3(z) = \\frac{\\nu}{1 - \\nu} \\rho g z\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "So what happens when the Poisson's ratio is variable ?  \n",
+    "\n",
+    "\n",
+    "Stress Ratio: \n",
+    "\n",
+    "From the previous derivation:\n",
+    "$$\n",
+    "σ3 / σ1 = ν / (1 − ν)\n",
+    "$$\n",
+    "\n",
+    "If ν increases: \n",
+    "\n",
+    "- The ratio σ3 / σ1 increases.\n",
+    "- The horizontal stress σ3 becomes closer to the vertical stress σ1\n",
+    "- The differential stress (σ1 − σ3) decreases.\n",
+    "\n",
+    "\n",
+    "If ν decreases: \n",
+    "\n",
+    "- The ratio σ3 / σ1 decreases.\n",
+    "- The horizontal stress becomes smaller relative to the vertical stress.\n",
+    "- The differential stress (σ1 − σ3) increases.\n",
+    "\n",
+    "\n",
+    "\n",
+    "This means that for very small ν (brittle, highly compressible rock which does not expand a lot on the horizontal direction) \n",
+    "σ3 is much smaller than σ1, the differential stress (σ1 − σ3) is big so the rock reaches quicker the fail point because it cannot expand on the sides.  \n",
+    "  \n",
+    "For a big ν (rock which deforms a lot more on the horizontal direction when a vertical stress is applied), the rock will resist much better to a vertical load because it can expand so the failure point comes much later. \n",
+    "\n",
+    "---\n",
+    "\n",
+    "b) <u> Evaluate what happens when the porosity is decreasing from 40% at the Earth\n",
+    "Surface to 0% at 5 km depth under the assumption the whole system contains of\n",
+    "sandstones (density of non-porous sandstone is 2.65 g/cm3</u>: \n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
