Update Exercise Geomechanics and Structural Geology (Feb 2026).ipynb

--- a/Exercise Geomechanics and Structural Geology (Feb 2026).ipynb
+++ b/Exercise Geomechanics and Structural Geology (Feb 2026).ipynb
@@ -626,10 +626,13 @@
     "To calculate vertical stress (sigma 1), we use the average of density, as follow :\n",
     "$$\\sigma_1(z) = \\rho_{avg}(z) \\cdot g \\cdot z \\quad \\text{where} \\quad \\rho_{avg}(z) = \\frac{\\rho(0) + \\rho(z)}{2}$$\n",
     "\n",
+    "\n",
+    "(We can only use the average density beacause density changes linearly) \n",
+    "\n",
     "Horizontal stress (normal faulting, ν=0.25):\n",
     "$$\\sigma_3(z) = \\frac{\\nu}{1-\\nu} \\sigma_1(z) = \\frac{1}{3} \\sigma_1(z)$$\n",
     "\n",
-    "The formulas above show that progressive compaction creates depth-dependent density, requiring the average density method to properly account for the varying overburden weight. This differs from assuming constant 0% porosity, which can overestimate the actual stress.\n",
+    "The formulas above show that progressive compaction creates depth-dependent density, requiring the average density method to properly account for the varying overburden weight. This differs from assuming 0% porosity everywhere, which overestimates the actual stress.\n",
     "\n",
     "A simulation of progressive compaction is performed as follow:"
    ]
