Update Exercise Geomechanics and Structural Geology (Feb 2026).ipynb

--- a/Exercise Geomechanics and Structural Geology (Feb 2026).ipynb
+++ b/Exercise Geomechanics and Structural Geology (Feb 2026).ipynb
@@ -738,7 +738,7 @@
    "source": [
     "---\n",
     "\n",
-    "<u>Part (3c): Evaluate what happens when you incorporate a fictive layered system that hassignificant variations in porosity (and thus density) and Poisson’s ratio. Make a layered system with a set of high porous layers (e.g. 40%) that also have a high Poisson’s ratio (PR ~0.4) vs a set of layers that have a low porosity (<5%) and low Poisson’s ratio (PR ~0.1). Play with the layer thickness to see how the sigma 1, sigma 3 vary. </u>\n",
+    "<u>Part (3c): </u> Evaluate what happens when you incorporate a fictive layered system that hassignificant variations in porosity (and thus density) and Poisson’s ratio. Make a layered system with a set of high porous layers (e.g. 40%) that also have a high Poisson’s ratio (PR ~0.4) vs a set of layers that have a low porosity (<5%) and low Poisson’s ratio (PR ~0.1). Play with the layer thickness to see how the sigma 1, sigma 3 vary.\n",
     "\n",
     "**Solution:** Creating a fictive layered system with alternating properties:\n",
     "- High porosity layers: φ = 40%, ν = 0.4 (weaker, more compressible)\n",
@@ -992,7 +992,179 @@
     "above and see how far or how much above we get to the Mohr-Coulomb criteria for the\n",
     "different lithologies. Are we expecting any failure and fracturing in any of the scenarios or\n",
     "not? Use an extensional stress regime for the analyses and a dominant fault/fracture\n",
-    "orientation of 70° from sigma3.\n"
+    "orientation of 70° from sigma3.\n",
+    "\n",
+    "\n",
+    "For this we will analyse the three different cases and for each, where the differential stress is maximum because this is where the probabilty of failure is the highest as well. \n",
+    "\n",
+    "<u>For case a) (uniform density) :</u>\n",
+    "\n",
+    "To expect if there is any failure and fracturing, we focus on the highest depth (5 km) and the where the poisson ration is the lowest (ν= 0.15) because if there is no failure in this case, it will normaly not fail for the other cases. \n",
+    "\n",
+    "\n",
+    "The fault as an orientation of 70° to σ₃ and we know that there is 90° between σ₃ and σ1 so there is 20° form σ1 to the fault. \n",
+    "\n",
+    "\n",
+    "\n",
+    "- Density:  \n",
+    "  $\\rho = 2650\\ \\mathrm{kg/m^3}$\n",
+    "\n",
+    "- Vertical stress: \n",
+    "  $\\sigma_1 = \\rho g z \\approx 130\\ \\mathrm{MPa}$\n",
+    "\n",
+    "  \n",
+    "- $\\sigma_3 = \\frac{\\nu}{1-\\nu} \\sigma_1$\n",
+    "\n",
+    "\n",
+    "- Minimum horizontal stress: \n",
+    "  $$\\sigma_3 = \\frac{0.15}{0.85} \\times 130 \\approx 22.9\\ \\mathrm{MPa}$$\n",
+    "\n",
+    "- Formula of the normal stress on the fault plane:  \n",
+    "$$\n",
+    "\\sigma_n = \\frac{\\sigma_1 + \\sigma_3}{2} + \\frac{\\sigma_1 - \\sigma_3}{2} \\cos(2\\alpha)\n",
+    "$$\n",
+    "\n",
+    "- Shear stress on the fault plane:  \n",
+    "$$\n",
+    "\\tau = \\frac{\\sigma_1 - \\sigma_3}{2} \\sin(2\\alpha)\n",
+    "$$\n",
+    "\n",
+    "- Mohr-Coulomb failure criterion:  \n",
+    "$$\n",
+    "\\tau_{\\mathrm{fail}} = c + \\sigma_n \\tan \\varphi\n",
+    "$$\n",
+    "---\n",
+    "\n",
+    "\n",
+    "- Normal stress: \n",
+    "  $$\\sigma_n = 76.5 + 53.5 \\cdot 0.766 \\approx 117.5\\ \\mathrm{MPa}$$\n",
+    "\n",
+    "- Shear stress:\n",
+    "  $$\\tau = 53.5 \\cdot 0.643 \\approx 34.4\\ \\mathrm{MPa}$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "**Mohr-Coulomb Criterion for Each Rock:** \n",
+    "\n",
+    "we had, \n",
+    "\n",
+    "| Rock Type       | $c$ (MPa) | $\\varphi$ (°) | $\\tan \\varphi$ |\n",
+    "|-----------------|------------|---------------|----------------|\n",
+    "| Pennant         | 28.40      | 43.53         | 0.952          |\n",
+    "| Darley Dale     | 22.00      | 32.62         | 0.639          |\n",
+    "| Red Felser      | 11.98      | 42.23         | 0.904          |\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<u>Pennant Sandstone</u>\n",
+    "$$\n",
+    "\\tau_{\\mathrm{fail}} = 28.40 + 117.5 \\times 0.952 \\approx 28.40 + 111.9 = 140.3\\ \\mathrm{MPa}\n",
+    "$$  \n",
+    "  \n",
+    "$\\tau = 34.4\\ \\mathrm{MPa} \\ll 140.3\\ \\mathrm{MPa}$  \n",
+    "➡ Far from failure  \n",
+    "\n",
+    "\n",
+    "\n",
+    "<u>Darley Dale Sandstone</u>\n",
+    "$$\n",
+    "\\tau_{\\mathrm{fail}} = 22 + 117.5 \\times 0.639 \\approx 22 + 75.1 = 97.1\\ \\mathrm{MPa}\n",
+    "$$  \n",
+    "Comparison:  \n",
+    "$\\tau = 34.4\\ \\mathrm{MPa} < 97.1\\ \\mathrm{MPa}$  \n",
+    "➡ Weakest among the three, but still no failure \n",
+    "\n",
+    "\n",
+    "\n",
+    "<u>Red Felser</u>\n",
+    "$$\n",
+    "\\tau_{\\mathrm{fail}} = 11.98 + 117.5 \\times 0.904 \\approx 11.98 + 106.3 = 118.3\\ \\mathrm{MPa}\n",
+    "$$  \n",
+    "\n",
+    "Comparison:  \n",
+    "$\\tau = 34.4\\ \\mathrm{MPa} < 118.3\\ \\mathrm{MPa}$  \n",
+    "➡ No failure\n",
+    "  \n",
+    "---\n",
+    "\n",
+    "<u>For case b) (Progrssive compaction) :</u>\n",
+    "\n",
+    "Again, we will calculate for a depth of 5km where  σ1 is the highest, if there is no failure in this case, it will normaly not fail for the other cases.\n",
+    "\n",
+    "For progressive compaction (porosity 40% → 0%) at 5 km:  \n",
+    "$\\sigma_1(5\\ \\mathrm{km}) \\approx 103.96\\ \\mathrm{MPa} \\approx 104\\ \\mathrm{MPa}$\n",
+    "\n",
+    "We keep:\n",
+    "\n",
+    "- $\\sigma_1 \\approx 104\\ \\mathrm{MPa}$\n",
+    "- $\\nu = 0.25$\n",
+    "- Normal faulting regime:  \n",
+    "  \n",
+    "$$\\sigma_3 = \\frac{\\nu}{1-\\nu} \\sigma_1 = \\frac{0.25}{0.75}\\sigma_1 = \\frac{1}{3} \\sigma_1 \n",
+    "$$  \n",
+    "\n",
+    "$$\\sigma_3 \\approx \\frac{104}{3} \\approx 34.65\\ \\mathrm{MPa}$$\n",
+    "\n",
+    "\n",
+    "- Normal stress:  \n",
+    "$$\n",
+    "\\sigma_n = 69.35 + 34.65 \\cdot 0.766\n",
+    "$$\n",
+    "$$\n",
+    "\\sigma_n  \\approx 95.9\\ \\mathrm{MPa}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "- Shear stress:  \n",
+    "$$\n",
+    "\\tau = 34.65 \\cdot 0.643\n",
+    "$$\n",
+    "\n",
+    "(see formula above)\n",
+    "$$\n",
+    "\\tau \\approx 22.3\\ \\mathrm{MPa}\n",
+    "$$\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    " \n",
+    "**Mohr–Coulomb Criterion for the Same Rocks:**\n",
+    "\n",
+    "\n",
+    "<u>Pennant Sandstone</u>\n",
+    "$$\n",
+    "\\tau_{\\mathrm{fail}} = 28.40 + 95.9 \\cdot 0.952 \\approx 28.40 + 91.3 = 119.7\\ \\mathrm{MPa}\n",
+    "$$  \n",
+    "Comparison:  \n",
+    "$\\tau = 22.3\\ \\mathrm{MPa} < 119.7\\ \\mathrm{MPa}$  \n",
+    "➡ Far from failure\n",
+    "\n",
+    "<u>Darley Dale Sandstone</u>\n",
+    "$$\n",
+    "\\tau_{\\mathrm{fail}} = 22 + 95.9 \\cdot 0.639 \\approx 22 + 61.3 = 83.3\\ \\mathrm{MPa}\n",
+    "$$  \n",
+    "Comparison:  \n",
+    "$\\tau = 22.3\\ \\mathrm{MPa} < 83.3\\ \\mathrm{MPa}$  \n",
+    "➡ No failure\n",
+    "\n",
+    "<u>Red Felser</u>\n",
+    "$$\n",
+    "\\tau_{\\mathrm{fail}} = 11.98 + 95.9 \\cdot 0.904 \\approx 11.98 + 86.7 = 98.7\\ \\mathrm{MPa}\n",
+    "$$  \n",
+    "Comparison:  \n",
+    "$\\tau = 22.3\\ \\mathrm{MPa} < 98.7\\ \\mathrm{MPa}$  \n",
+    "➡ No failure\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
