Update Exercise Geomechanics and Structural Geology (Feb 2026).ipynb

--- a/Exercise Geomechanics and Structural Geology (Feb 2026).ipynb
+++ b/Exercise Geomechanics and Structural Geology (Feb 2026).ipynb
@@ -1088,7 +1088,7 @@
     "  \n",
     "---\n",
     "\n",
-    "<u>For case b) (Progrssive compaction) :</u>\n",
+    "<u>For case b) (Progressive compaction) :</u>\n",
     "\n",
     "Again, we will calculate for a depth of 5km where  σ1 is the highest, if there is no failure in this case, it will normaly not fail for the other cases.\n",
     "\n",
@@ -1158,9 +1158,137 @@
     "$\\tau = 22.3\\ \\mathrm{MPa} < 98.7\\ \\mathrm{MPa}$  \n",
     "➡ No failure\n",
     "\n",
+    "---\n",
+    "\n",
+    "<u>For case c) (layered system with variations in porosity) :</u>\n",
+    "\n",
+    "We will again consider the layer at 5km depth and the most critical ones are with low porosity (<5%) because higher density so higher σ1 and low poisson's ratio (0.1)\n",
+    "\n",
+    "\n",
+    "- From the stress plot:  \n",
+    "  $\\sigma_1^{\\mathrm{layered}}(5\\ \\mathrm{km}) \\approx 100\\ \\mathrm{MPa}$\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
     "\n",
     "\n",
     "\n",
+    "$$\n",
+    "\\sigma_3 = \\frac{\\nu_{\\mathrm{layer}}}{1-\\nu_{\\mathrm{layer}}} \\sigma_1\n",
+    "$$\n",
+    "\n",
+    "With $\\nu_{\\mathrm{layer}} = 0.1$ and $\\sigma_1 = 100\\ \\mathrm{MPa}$:\n",
+    "\n",
+    "$$\n",
+    "\\sigma_3 = \\frac{0.10}{1-0.10} \\cdot 100\n",
+    "= \\frac{0.10}{0.90} \\cdot 100\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\sigma_3 \\approx 11.1\\ \\mathrm{MPa}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "$$\n",
+    "\\sigma_n = 55.6 + 44.4 \\times 0.766\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\sigma_n \\approx  89.7\\ \\mathrm{MPa}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "- Shear Stress on the Plane: \n",
+    "\n",
+    "$$\n",
+    "\\tau =\n",
+    "\\frac{\\sigma_1 - \\sigma_3}{2} \\sin(40^\\circ)\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\tau \\approx 28.6\\ \\mathrm{MPa}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "<br> \n",
+    "\n",
+    "**Mohr–Coulomb Criterion for the Same Rocks:**\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "<u>Pennant Sandstone</u>\n",
+    "\n",
+    "$$\n",
+    "\\tau_{\\mathrm{fail}} =\n",
+    "28.40 + 89.6 \\cdot 0.952\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\tau_{\\mathrm{fail}} \\approx   113.7\\ \\mathrm{MPa}\n",
+    "$$\n",
+    "\n",
+    "Comparison:\n",
+    "\n",
+    "$$\n",
+    "\\tau = 28.6\\ \\mathrm{MPa} < 113.7\\ \\mathrm{MPa}\n",
+    "$$\n",
+    "\n",
+    "→ **Far from failure**\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "<u>Darley Dale Sandstone</u>\n",
+    "\n",
+    "$$\n",
+    "\\tau_{\\mathrm{fail}} =\n",
+    "22 + 89.6 \\cdot 0.639\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\tau_{\\mathrm{fail}} \\approx 79.2\\ \\mathrm{MPa}\n",
+    "$$\n",
+    "\n",
+    "Comparison:\n",
+    "\n",
+    "$$\n",
+    "\\tau = 28.6\\ \\mathrm{MPa} < 79.2\\ \\mathrm{MPa}\n",
+    "$$\n",
+    "\n",
+    "→ **No failure**\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "<u>Red Felser</u>\n",
+    "\n",
+    "$$\n",
+    "\\tau_{\\mathrm{fail}} =\n",
+    "11.98 + 89.6 \\cdot 0.904\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\tau_{\\mathrm{fail}} \\approx  93.0\\ \\mathrm{MPa}\n",
+    "$$\n",
+    "\n",
+    "Comparison:\n",
+    "\n",
+    "$$\n",
+    "\\tau = 28.6\\ \\mathrm{MPa} < 93.0\\ \\mathrm{MPa}\n",
+    "$$\n",
+    "\n",
+    "→ **Closer to failure but still no failure**\n",
     "\n",
     "\n",
     "\n",
